--- a/style.css
+++ b/style.css
@@ -1,19 +1,65 @@
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 5rem;
+  font-weight: bold;
+  color: #4c3a51;
+}
+
 .heading {
-  padding-top: 25px;
+  margin-top: 5%;
   text-align: center;
 }
 .page-data {
-  margin-top: 15%;
+  margin-top: 5%;
   border-radius: 5px;
   border: solid 1px rgb(207, 205, 205);
 }
 .data-row {
-  text-align: center;
+  margin-top: 1%;
   font-size: 1.5rem;
-}
-.data-col {
-  background-image: linear-gradient(to top left, rgb(175, 175, 175), white);
 }
 .search-btn {
   background-image: linear-gradient(to top left, rgb(66, 65, 65), white);
+}
+.flag-image {
+  width: 100px;
+  border-radius: 5px;
+  height: 50px;
+}
+.nthChild:nth-child(odd) {
+  background-image: linear-gradient(to top left, #cbdcf7, #cbb3f5);
+  border: solid 1px rgb(221, 219, 219);
+}
+
+.heading-row {
+  margin-top: 1%;
+  font-size: 1.5rem;
+}
+
+.search {
+  position: relative;
+  box-shadow: 0 0 40px rgba(51, 51, 51, 0.1);
+}
+
+.search input {
+  height: 60px;
+  text-indent: 25px;
+  border: 2px solid #d6d4d4;
+}
+.search .fa-search {
+  position: absolute;
+  top: 20px;
+  left: 16px;
+}
+
+.search button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  height: 50px;
+  width: 110px;
+  background-image: linear-gradient(to top left, #acc8f5, #bb98f7);
+}
+.search--div {
+  margin-top: 10%;
 }
