--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 5rem;
   font-weight: bold;
-  color: #4c3a51;
+  color: #4e7960;
 }
 
 .heading {
@@ -18,13 +18,12 @@ h1 {
   margin-top: 1%;
   font-size: 1.5rem;
 }
-.search-btn {
-  background-image: linear-gradient(to top left, rgb(66, 65, 65), white);
-}
+
 .flag-image {
   width: 100px;
   border-radius: 5px;
   height: 50px;
+  box-shadow: 5px 10px 18px #bbb7b7;
 }
 .nthChild:nth-child(odd) {
   background-image: linear-gradient(to top left, #cbdcf7, #cbb3f5);
@@ -51,15 +50,15 @@ h1 {
   top: 20px;
   left: 16px;
 }
-
-.search button {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  height: 50px;
-  width: 110px;
-  background-image: linear-gradient(to top left, #acc8f5, #bb98f7);
-}
 .search--div {
   margin-top: 10%;
+}
+
+.page2--data {
+  border: none;
+}
+
+.home--link {
+  text-decoration: none;
+  color: #49835f;
 }
